--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     "prettier": "^2.0.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^1.0.0",
+    "stylelint": "^13.9.0",
+    "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "terser-webpack-plugin": "^2.2.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
@@ -60,6 +64,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@types/swiper": "^5.4.1",
+    "swiper": "^6.4.10",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6"
   }
