--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/swiper": "^5.4.2",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@vue/compiler-sfc": "^3.1.2",
     "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
@@ -82,10 +83,8 @@
     "typescript": "^3.9.7",
     "url-loader": "^2.1.0",
     "vue-debounce-decorator": "^1.0.1",
-    "vue-loader": "^15.9.6",
+    "vue-loader": "^16.3.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "vuex-module-decorators": "^1.0.1",
     "webpack": "^4.38.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^3.3.6",
@@ -94,9 +93,10 @@
   },
   "dependencies": {
     "swiper": "^6.5.1",
-    "vue": "^2.6.12",
+    "vue": "^3.1.2",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-module-decorators": "^1.0.1"
   }
 }
